--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png">
   <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-  <title>React App</title>
+  <title>Appetizer Contest</title>
 </head>
 
 <body>
